--- a/Real-Estate-app/client/package.json
+++ b/Real-Estate-app/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.16",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,9 +16,11 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.11.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "swiper": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
