--- a/Real-Estate-app/api/package.json
+++ b/Real-Estate-app/api/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon api/index.js",
-    "start": "node api/index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "npm run build"
   },
   "keywords": [],
   "author": "",
