--- a/Real-Estate-app/api/package.json
+++ b/Real-Estate-app/api/package.json
@@ -10,6 +10,9 @@
     "start": "node index.js"
     
   },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
