--- a/Real-Estate-app/client/package.json
+++ b/Real-Estate-app/client/package.json
@@ -51,5 +51,5 @@
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "https://backend-4oem.onrender.com"
 }
